grokking REST issues
